--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,61 @@
 nav {
   background-color: #bea987;
 }
+
+.container-fluid {
+}
 .nav-item a {
   color: black;
 }
 /* Hero */
+h1,
+h3 {
+  text-shadow: 2px 2px 2px #333, 2px 2px 3px #9cae67;
+}
 
+h1 {
+  font-size: 12em;
+}
+.card {
+  background-color: #bea987;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 3em;
+  }
+  h3 {
+    font-size: 0.5em;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  h1 {
+    font-size: 5em;
+  }
+  h3 {
+    font-size: 0.8em;
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 8em;
+  }
+  h3 {
+    font-size: 1.2em;
+  }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  ...;
+}
 /* About */
 
 /* Cuisine */
