--- a/styles.css
+++ b/styles.css
@@ -12,41 +12,50 @@
 
 /* Contact */
 
-.footer-container-fluid{
-background-color: #BEA987;
-height: 350px;
-font-weight: 900;
+.container-fluid {
+  background-color: #BEA987;
+  padding: 1%;
 }
-.footer-row{
-  border: 0px solid red;
-  text-align: center;
-  height: 33.33%;
-}
-.footer-col{
+.footer-row {
   border: 0px solid white;
+  padding: 10px;
 }
-.footer-col button{
-  padding: 15px 15px;
-  width: 20%;
+.footer-col-3 a{
+  color: black;
+  font-weight: 500;
+  border: 0px solid white;
+  padding: 5px;
+}
+.footer-col-3 ul{
+list-style: none;
+border: 0px solid white;
+padding: 20px;
+}
+.footer-col-9 form{
+  font-weight: 500;
+  border: 0px solid white;
+  padding: 20px;
+}
+.footer-col-9 button{
+  border-color: white;
+  border-right-color: white;
+  box-shadow: none;
+}
+.footer-col-9 button:hover{
   background: transparent;
-  border-radius: 25px;
-  margin: 30px;
-  background-color: #9CAE67;
-  color: black;
-  border: none;
-  font-weight: 800;
-  font-size: large;
-  font-stretch:wider;
-  cursor: pointer;
 }
-.footer-col button:hover{
- background: transparent;
+.footer-col-10 p{
+font-weight: 500;
+border: 0px solid white;
+align-content: center;
+padding: 20px;
+border-top: 1px solid black;
 }
-.footer-col img{
-  margin-top: 30px;
-  padding: 5px 5px;
+.footer-col-2{
+  padding: 20px;
+  border-top: 1px solid black;
 }
-.footer-col p{
-  margin-top: 30px;
-  color: black;
+.footer-col-2 img{
+  border-radius: 5px;
 }
+
