--- a/styles.css
+++ b/styles.css
@@ -13,43 +13,43 @@ nav {
   color: black;
 }
 /* Hero */
-h1,
-h3 {
+#hero-section h1,
+#hero-section h3 {
   text-shadow: 2px 2px 2px #333, 2px 2px 3px #9cae67;
 }
 
-h1 {
+#hero-section h1 {
   font-size: 12em;
 }
-.card {
+#hero-section .card {
   background-color: #bea987;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  h1 {
+  #hero-section h1 {
     font-size: 3em;
   }
-  h3 {
+  #hero-section h3 {
     font-size: 0.5em;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  h1 {
+  #hero-section h1 {
     font-size: 5em;
   }
-  h3 {
+  #hero-section h3 {
     font-size: 0.8em;
   }
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  h1 {
+  #hero-section h1 {
     font-size: 8em;
   }
-  h3 {
+  #hero-section h3 {
     font-size: 1.2em;
   }
 }
