--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,11 @@ main h2 {
   margin-left: 5%;
   padding: 0%;
 }
+.recipe-img-col-dessert {
+  width: 300px;
+  height: 350px;
+  border-radius: 15%;
+}
 
 /* Querries */
 
@@ -345,6 +350,10 @@ main h2 {
   .recipe-img-col {
     max-width: 250px;
     max-height: 200px;
+  }
+  .recipe-img-col-dessert {
+    max-height: 250px;
+    max-width: 200px;
   }
   #recipe-img-container {
     max-height: 250px;
