--- a/styles.css
+++ b/styles.css
@@ -229,3 +229,19 @@ main h2 {
 .footer-col-2 img {
   border-radius: 5px;
 }
+#maindish .container-fluid{
+  margin: 0;
+}
+.row .main-dish{
+  justify-content: center;
+  text-align: center;
+  margin-bottom:3%;
+}
+#main-dish-row{
+  align-self: center;
+  justify-content: center;
+  background-color: black;
+  height: 1px;
+  width: 90%;
+  margin: 3%;
+}
